# pico-lvglBMP085

./: .gitmodules  CMakeLists.txt  README.md
libraries/: CMakeLists.txt  lv_conf.h
libraries/freertos/: FreeRTOSConfig.h
rtosLVGL/: CMakeLists.txt  buttons.c  buttons.h  driv_lvgl.c  driv_lvgl.h  main.c  screenCarousel.c  screenCarousel.h
